# Solvix-NewsAnalyzer

./: .replit  app.py  data_loader.py  data_processor.py  model.py  model_trainer.py  prediction_system.py  pyproject.toml  training_app.py  utils.py  visualization.py
attached_assets/: Pasted-Here-are-UI-functionalities-for-a-fake-news-classification-system-using-Transformers-focusing-o-1748558935608.txt  Pasted-LookupError-Resource-93mpu-1748559649869.txt
