[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.19.6",
    "pandas>=2.2.3",
    "streamlit-folium>=0.25.0",
    "streamlit>=1.45.1",
    "matplotlib>=3.10.3",
    "textblob>=0.19.0",
    "numpy>=2.2.6",
    "plotly>=6.1.2",
    "wordcloud>=1.9.4",
    "nltk>=3.9.1",
    "scikit-learn>=1.6.1",
    "joblib>=1.5.1",
]
